# SatProp

./: CMakeLists.txt  PropResults.h  Propagator.cpp  Propagator.h  SGP4DataViewer.h  main.cpp
globe/: GlobeViewer.cpp  GlobeViewer.h
map/: SatelliteMapWindow.cpp  SatelliteMapWindow.h
